--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "cloudinary": "^1.40.0",
     "framer-motion": "^10.13.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
